# scientific_calculator

./: BinaryFileHandler.cpp  BinaryFileHandler.h  CMakeLists.txt  Calculator.cpp  Calculator.h  EquationSolver.cpp  EquationSolver.h  FileHandler.cpp  FileHandler.h  ProiectCerinte.txt  Shunting_Yard.cpp  Shunting_Yard.h  Stack.cpp  Stack.h  TextFileHandler.cpp  TextFileHandler.h  main.cpp
